# ocaml-tree-sitter-semgrep

./: .gitignore  .gitmodules  0001-fix-lambda-typed-implicit-parameter.patch  CODEOWNERS  Makefile  README.md  conductor.json  package.json  pyproject.toml  tree-sitter-config.mk  tree-sitter.opam
.circleci/: config.yml
.github/: pull_request_template.md
.github/workflows/: abi15-gating.yml  ci.yml  grammar-ts-version.yml  pre-commit.yml  propose-grammar-updates.yml  python-tests.yml  semgrep.yml
core/: Dockerfile  README.md  dune  dune-project  tree-sitter.opam
core/patch/tree-sitter-0.22.6/: 0001-Makefile-backports.patch
core/scripts/: download-tree-sitter  most-starred-for-language  parse-examples  provision-tree-sitter  provision-tree-sitter-all  setup-opam
core/test/: discover.template.ml
core/test/arithmetic/: dune
doc/: README.md  adding-a-language.md  fix-semgrep-grammar-skill.md  release.md  semgrep-constructs.md  updating-a-grammar.md
lang/: .gitignore  Makefile  Makefile.common  check_submodule_pinned  generate_abi_args.py  language-variants-0.20.6  language-variants-0.20.8  language-variants-0.22.6  language-variants-0.26.3  languages-0.20.6  languages-0.20.6.readme  languages-0.20.8  languages-0.22.6  languages-0.26.3  languages.readme  release  submodule_drift.py  test-lang  test_abi15_gating.py  test_check_submodule_pinned.py  test_grammar_ts_version.py  test_submodule_drift.py  test_ts_versions.py  ts_versions.py
lang/apex/: README.md  extensions.txt  fyi.list  projects.txt
lang/bash/: extensions.txt  fyi.list
lang/c-sharp-pro/: fyi.list
lang/cairo/: extensions.txt  fyi.list  projects.txt
lang/cfml/: extensions.txt  fyi.list  projects.txt
lang/circom/: extensions.txt  fyi.list  projects.txt
lang/clojure/: extensions.txt  fyi.list
lang/cpp/: fyi.list
lang/dart/: extensions.txt  fyi.list  projects.txt
lang/dockerfile/: extensions.txt  fyi.list  projects.txt
lang/elixir/: extensions.txt  fyi.list  projects.txt
lang/fga/: extensions.txt  fyi.list  projects.txt
lang/fsharp/: extensions.txt  fyi.list  projects.txt
lang/gomod/: fyi.list
lang/gosu/: extensions.txt  fyi.list  projects.txt
lang/hack/: projects.txt
lang/haskell/: extensions.txt  fyi.list  projects.txt
lang/hcl/: extensions.txt
lang/html/: extensions.txt  fyi.list
lang/java/: fyi.list
lang/json/: extensions.txt  fyi.list
lang/jsonnet/: extensions.txt  fyi.list
lang/julia/: extensions.txt  fyi.list  projects.txt
lang/kotlin/: projects.txt
lang/lua/: fyi.list
lang/make/: fyi.list
lang/move/: fyi.list
lang/move-on-aptos/: extensions.txt  fyi.list  projects.txt
lang/move-on-sui/: extensions.txt  fyi.list  projects.txt
lang/ocaml/: projects.txt
lang/php/: extensions.txt  fyi.list  projects.txt  tree-sitter.json
lang/php-only/: fyi.list  tree-sitter.json
lang/powershell/: extensions.txt  fyi.list  projects.txt
lang/promql/: extensions.txt  fyi.list  projects.txt
lang/proto/: extensions.txt  fyi.list
lang/python/: extensions.txt  fyi.list  projects.txt
lang/ql/: extensions.txt  fyi.list  projects.txt
lang/requirements/: fyi.list
lang/scala/: extensions.txt  projects.txt
lang/scripts/: stamp-tree-sitter-version  test-abi15-gating  test-grammar-ts-version  ts-generate-abi-args  ts-version-for-grammar-dir  ts-version-for-lang  ts-versions
lang/semgrep-grammars/: sg-add-simple-lang
lang/sml/: extensions.txt  (+2 more)
lib/: ast_grammar_normalized.re  ast_grammar_normalized2.ml  codegen_json_reader.re  codegen_json_reader.rei  codegen_types.re  codegen_types.rei  dune  grammar.atd  grammar_j.ml  grammar_j.mli  grammar_t.ml  menhir.ml  menhir.mli  normalize_grammar2.ml  parse_grammar.re  test_tree_sitter.re  tree_sitter_grammar.atd
scripts/: aggregate-parse-errors  build-ocaml  cursor_agent_runner.py  install-tree-sitter-lib  lang-stat  most-starred-for-language  ocaml-tree-sitter-gen-c  ocaml-tree-sitter-gen-ocaml  parse-examples  propose-grammar-update  report-stat  test_cursor_agent_runner.py  test_propose_grammar_update.py  test_update_grammar.py  update-grammar
(+300 files in other folders)
